--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@
 
                             
                             <a href="https://medium.com/@ahmetselcuk" target="_blank"><i class="fab fa-medium text-light-gray"></i></a>
+			     <a href="https://twitter.com/ahmtselcukk" target="_blank"><i class="fab fa-twitter text-light-gray"></i></a>
                             <a href="https://github.com/ahmetselcukozdemir" target="_blank"><i class="fab fa-github text-light-gray"></i></a>
                             <a href="https://www.youtube.com/channel/UCH-H0SdxilVYDGlmIA5Wbew?view_as=subscriber" target="_blank"><i class="fab fa-youtube text-light-gray"></i></a>
                             <a href="https://www.linkedin.com/in/ahmetselcuk/" target="_blank"><i class="fab fa-linkedin-in text-light-gray" target="_blank"></i></a>
