--- a/index.html
+++ b/index.html
@@ -146,19 +146,42 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="main-timeline">
+					
+					     <div class="timeline">
+                            <div class="icon"></div>
+                            <div class="date-content">
+                                <div class="date-outer">
+                                    <span class="date">
+                                      <span class="month"> ✅</span>
+                                        <span style="font-size:15px;" class="year">Now</span>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="timeline-content">
+                                <h5 class="title"><a href="https://www.turkmedya.com.tr/" target="_blank">TürkMedya Yayın Grubu </a></h5>
+                                <p class="description">
+                                                      <strong>Software Specialist</strong> <br>
+                                     -.NET MVC / Core, WebSocket, WebAPI, JSON, XML, Web (Javascript, CSS, HTML5, Bootstrap, AJAX), SQL programlama dillerini kullanarak temiz, ölçeklenebilir back-end kodu yazmak.
+                                         <br>
+                                        -Gereksinimleri anlamak ve uygun uçtan uca çözümler tasarlamak.<br>
+                                                      -Kodları,web ve mobil uygulama servislerini gözden geçirme, güncelleme, yeniden düzenleme,hataları ayıklama.
+                                                      
+                                </p>
+                            </div>
+                        </div>
 
                         <div class="timeline">
                             <div class="icon"></div>
                             <div class="date-content">
                                 <div class="date-outer">
                                     <span class="date">
-                                        <span class="month">Now</span>
-                                        <span style="font-size:15px;" class="year">2019</span>
+                                      <span class="month"> ✅</span>
+                                        <span style="font-size:15px;" class="year">2019-2020</span>
                                     </span>
                                 </div>
                             </div>
                             <div class="timeline-content">
-                                <h5 class="title">CMC Turkey</h5>
+                                <h5 class="title"><a href="https://www.cmcturkey.com/" target="_blank">CMC Turkey</a></h5>
                                 <p class="description">
                                                       <strong>Software Developer</strong> <br>
                                      -CMCPlanet yazılımı üzerinde istenilen taleplere uygun yazılım geliştirmesi yapmak veya istenilen revize işlemlerini gerçekleştirmek.
@@ -176,13 +199,13 @@
                             <div class="date-content">
                                 <div class="date-outer">
                                     <span class="date">
-                                        <span class="month">3 Mounth</span>
+                                        <span class="month">✅</span>
                                         <span style="font-size:15px;" class="year">2019</span>
                                     </span>
                                 </div>
                             </div>
                             <div class="timeline-content">
-                                <h5 class="title">Hedef Direct</h5>
+                                <h5 class="title"><a href="http://www.hedefdirect.com" target="_blank">Hedef Direct </a></h5>
                                 <p class="description">
                                   <strong>  Mobile Application Developer and Software Specialist Assistant </strong> <br>
                                     -Veritabanı ve Disk Yedekleme,İzleme,Kontrol İşlemleri<br>
@@ -198,16 +221,16 @@
                             <div class="date-content">
                                 <div class="date-outer">
                                     <span class="date">
-                                        <span class="month">4 Mouth</span>
+                                        <span class="month">✅</span>
                                         <span style="font-size:15px;" class="year">2016</span>
                                     </span>
                                 </div>
                             </div>
                             <div class="timeline-content">
                                 <h5 class="title">
-                                    Neutec Technology<h5>
+                                    <a href="http://www.neutec.com.tr" target="_blank"> Neutec Technology </a><h5>
                                         <p class="description">
-                                            Information technology summer intern
+                                           Stajyer
                                         </p>
                             </div>
                         </div>
@@ -216,16 +239,16 @@
                             <div class="date-content">
                                 <div class="date-outer">
                                     <span class="date">
-                                        <span class="month">4 Mouth</span>
+                                        <span class="month">✅</span>
                                         <span style="font-size:15px;" class="year">2014</span>
                                     </span>
                                 </div>
                             </div>
                             <div class="timeline-content">
                                 <h5 class="title">
-                                    Sanalogi Information Technologies & Semerşah Tourism <h5>
+                                    <a href="https://www.sanalogi.com" target="_blank">Sanalogi Information Technologies & Semerşah Tourism </a> <h5>
                                         <p class="description">
-                                            Software summer intern
+                                            Stajyer
                                         </p>
                             </div>
                         </div>
