--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Ahmet Selçuk Özdemir" />
     <meta name="description" content="Ahmet Selçuk Özdemir" />
 
-    <title>ASO</title>
+    <title>ASO | Ahmet Selçuk ÖZDEMİR</title>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="css/plugins.css" />
     <link rel="stylesheet" href="fonts/fontawesome.css" />
