--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                     <div class="about-box">
                         <div class="porfile-photo">
-                            <img src="img/photo.jpg" alt="" />
+                            <img src="https://miro.medium.com/fit/c/680/680/1*bfXuNhdBEiFTLljF8_gn9Q.jpeg" alt="" />
                         </div>
                     </div>
 
