--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                             <div class="timeline-content">
                                 <h5 class="title"><a href="https://www.turkmedya.com.tr/" target="_blank">TürkMedya Yayın Grubu </a></h5>
                                 <p class="description">
-                                                      <strong>Software Specialist</strong> <br>
-                                     -.NET MVC / Core, WebSocket, WebAPI, JSON, XML, Web (Javascript, CSS, HTML5, Bootstrap, AJAX), SQL programlama dillerini kullanarak temiz, ölçeklenebilir back-end kodu yazmak.
+                                                      <strong>Software Specialist (Remote)</strong> <br>
+                                     -aksam.com.tr, star.com.tr, gunes.com gibi yüksek trafikli siteleri içinde barındıran toplamda 16 markayı yöneten,geliştiren ekip içerisinde .NET MVC / Core, WebSocket, WebAPI, JSON, XML, Javascript, AJAX, SQL programlama dillerini kullanarak back-end yazılım geliştirme uzmanı olarak görev almaktayım.
                                          <br>
                                         -Gereksinimleri anlamak ve uygun uçtan uca çözümler tasarlamak.<br>
                                                       -Kodları,web ve mobil uygulama servislerini gözden geçirme, güncelleme, yeniden düzenleme,hataları ayıklama.
