--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 <h5 class="title"><a href="https://www.turkmedya.com.tr/" target="_blank">TürkMedya Yayın Grubu </a></h5>
                                 <p class="description">
                                                       <strong>Software Specialist (Remote)</strong> <br>
-                                     -aksam.com.tr, star.com.tr, gunes.com gibi yüksek trafikli siteleri içinde barındıran toplamda 16 markayı yöneten,geliştiren ekip içerisinde .NET MVC / Core, WebSocket, WebAPI, JSON, XML, Javascript, AJAX, SQL programlama dillerini kullanarak back-end yazılım geliştirme uzmanı olarak görev almaktayım.
+                                     -<a href="https://www.aksam.com.tr" target="_blank">aksam.com.tr</a>, <a href="https://www.star.com.tr" target="_blank">star.com.tr</a>,<a href="https://www.gunes.com" target="_blank">gunes.com</a> gibi yüksek trafikli siteleri içinde barındıran toplam da 16 markayı yöneten,geliştiren ekip içerisinde .NET MVC / Core, WebSocket, WebAPI, JSON, XML, Javascript, AJAX, SQL programlama dillerini kullanarak back-end yazılım geliştirme uzmanı olarak görev almaktayım.
                                          <br>
                                         -Gereksinimleri anlamak ve uygun uçtan uca çözümler tasarlamak.<br>
                                                       -Kodları,web ve mobil uygulama servislerini gözden geçirme, güncelleme, yeniden düzenleme,hataları ayıklama.
