--- a/index.html
+++ b/index.html
@@ -160,10 +160,11 @@
                             <div class="timeline-content">
                                 <h5 class="title"><a href="https://www.turkmedya.com.tr/" target="_blank">TürkMedya Yayın Grubu </a></h5>
                                 <p class="description">
-                                                      <strong>Software Specialist (Remote)</strong> <br>
-                                     -<a href="https://www.aksam.com.tr" target="_blank">aksam.com.tr</a>, <a href="https://www.star.com.tr" target="_blank">star.com.tr</a>, <a href="https://www.gunes.com" target="_blank">gunes.com</a> gibi yüksek trafikli siteleri içinde barındıran toplam da 16 markayı yöneten, geliştiren ekip içerisinde backend yazılım geliştirme uzmanı olarak görev almaktayım.
-                                         <br>
-                                                      -Kodları,web ve mobil uygulama servislerini gözden geçirme, güncelleme, yeniden düzenleme,hataları ayıklama.
+                                                      <strong>Software Specialist (Hybrid )</strong> <br>
+                                    <strong> - </strong> I work as a software development specialist (back-end) in the team that manages and develops 12 brands that host high-traffic sites such as aksam.com.tr, star.com.tr, gunes.com.
+									 <br>
+ <strong> - </strong> We use .Net Core, .Net Framework(MVC), Redis, MemoryCache, NGINX Cache, MSSQL, Entity Framework, REST, SOAP and AJAX. Also I gained some experience on Design Pattern, Docker.
+                                        
                                                       
                                 </p>
                             </div>
@@ -183,12 +184,10 @@
                                 <h5 class="title"><a href="https://www.cmcturkey.com/" target="_blank">CMC Turkey</a></h5>
                                 <p class="description">
                                                       <strong>Software Developer</strong> <br>
-                                     -CMCPlanet yazılımı üzerinde istenilen taleplere uygun yazılım geliştirmesi yapmak veya istenilen revize işlemlerini gerçekleştirmek.
-                                         <br>
-                                        -Çeşitli sitelerden veri toplamak için HttpAgilityPack ile bir Windows Forms bot uygulaması yazıldı. <br>
-                                                      -Süreç yönetimi departmanının ihtiyacını karşılamak adına bir infografik web uygulaması yapıldı.Ana mantığı yüklenen yoğun verili ve karmaşık excel’i bir infografik formatına getirerek müşteriye daha görsel bir çıktı vermek.
-                                                      <br>
-                                                      -İstenilen websitelerinde iyileştirmeler yapmak.
+                                    <strong> - </strong> I was responsible for the development of the CMCPlanet software.
+									 <br>
+<strong> - </strong>A bot application was written with HttpAgilityPack to collect data from sites. <br>
+<strong> - </strong> An infographic web application was developed in order to meet the needs of the process management department.To give a more visual output to the customer by bringing the main logic of the intensive data and complex excel loaded into an infographic format.
                                 </p>
                             </div>
                         </div>
