--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<div class="profile">						
 					<div class="image">
 						<a href="#">
-							<img src="https://ahmetselcukozdemir.github.io/img/logo-light.png" alt="Ahmet Selçuk Özdemir">
+							<img src="images/logo-light.png" alt="Ahmet Selçuk Özdemir">
 						</a>
 					</div>
 					<div class="title">AHMET SELÇUK ÖZDEMİR</div>
