--- a/index.html
+++ b/index.html
@@ -1027,5 +1027,15 @@ intensive data and complex excel loaded into an infographic format.
 	-->
 	<script src="js/scripts.js"></script>
 	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EKSEJMYRGW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EKSEJMYRGW');
+</script>
+	
 </body>
 </html>
