--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 										Hi, my name is Ahmet Selçuk Özdemir. I'm 24
 years old, residing in Istanbul-Eyüpsultan. I have
 been working professionally as a software
-developer for about 2 years.
+developer for about 2+ years.
 									</p>
 								</div>
 							</div>
