--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@ intensive data and complex excel loaded into an infographic format.
 										</a>
 									</div>
 									<div class="desc">
-										<a  target="_blank"href="https://www.tv4.com.tr/" class="name has-popup">24 TV</a>
+										<a  target="_blank"href="https://www.yirmidort.tv/" class="name has-popup">24 TV</a>
 										<div class="category">Media,Channel</div>
 									</div>
 								</div>
