--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ intensive data and complex excel loaded into an infographic format.
 							<div class="col col-d-6 col-t-6 col-m-12 grid-item media border-line-h">
 								<div class="box-item">
 									<div class="image">
-										<a href="/images/alem.JPG" class="has-popup-video">
+										<a href="/images/alem2.JPG" class="has-popup-video">
 											<img src="https://furkanemre.com.tr/images/portfolio/logolar/alem.jpg" alt="" />
 											<span class="info">
 												<span class="ion ion-ios-paper"></span>
