--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@ intensive data and complex excel loaded into an infographic format.
 									</div>
 									<div class="desc">
 										<a target="_blank" href="https://www.gunes.com/" class="name has-popup">Güneş</a>
-										<div class="category">Medya</div>
+										<div class="category">Media</div>
 									</div>
 								</div>
 							</div>
@@ -691,7 +691,7 @@ intensive data and complex excel loaded into an infographic format.
 									</div>
 									<div class="desc">
 										<a  target="_blank" href="https://www.alem.com.tr/" class="name has-popup">ALEM</a>
-										<div class="category">Medya</div>
+										<div class="category">Media</div>
 									</div>
 								</div>
 							</div>
@@ -856,7 +856,7 @@ intensive data and complex excel loaded into an infographic format.
 								<div class="info-list">
 									<ul>
 										<li><strong>Address . . . . .</strong> İstanbul, Turkey</li>
-										<li><strong>Email . . . . .</strong> ahmet.ozdemir@turkmedya.com.tr</li>
+										<li><strong>Email . . . . .</strong> ahmet.ozdemir@turkmedya.com.tr / ahmetselcukozdemir01@gmail.com</li>
 										<!-- <li><strong>Phone . . . . .</strong> +123 654 78900</li> -->
 										<!-- <li><strong>Freelance . . . . .</strong> Available</li> -->
 									</ul>
