--- a/index.html
+++ b/index.html
@@ -853,10 +853,12 @@ intensive data and complex excel loaded into an infographic format.
 								<div class="map">
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6018.945352578322!2d28.92995057912989!3d41.03679136719143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caba0c316447b5%3A0x1aa802f6f028358c!2sDefterdar%2C%2034050%20Ey%C3%BCpsultan%2F%C4%B0stanbul!5e0!3m2!1str!2str!4v1646816846312!5m2!1str!2str" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 								</div>
+								<br>
+								<br>
 								<div class="info-list">
 									<ul>
 										<li><strong>Address . . . . .</strong> İstanbul, Turkey</li>
-										<li><strong>Email . . . . .</strong> ahmet.ozdemir@turkmedya.com.tr / ahmetselcukozdemir01@gmail.com</li>
+										<li><strong>Email . . . . .</strong> ahmet.ozdemir@turkmedya.com.tr</li>
 										<!-- <li><strong>Phone . . . . .</strong> +123 654 78900</li> -->
 										<!-- <li><strong>Freelance . . . . .</strong> Available</li> -->
 									</ul>
