--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ experience on Design Pattern, Docker.
 									</div>
 									<div class="resume-item border-line-h">
 										<div class="date">2019 - 2020</div>
-										<div class="name">Sofware Developer</div>
+										<div class="name">Software Developer</div>
 										<div class="company">CMC Turkey</div>
 										<p>
 											I was responsible for the development of the CMCPlanet software. A
