--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ developer for about 2+ years.You can review my website learn more about me.
 											I work as a software development specialist (back-end) in the team
 that manages and develops 12 brands that host high-traffic sites
 such as aksam.com.tr, star.com.tr, gunes.com. We use .Net Core, .Net
-Framework(MVC), Redis, MemoryCache, NGINX Cache, MSSQL, Entity Framework, REST, SOAP and AJAX. Also I gained some
+Framework(MVC), Redis, MemoryCache, NGINX Cache, MSSQL, Entity Framework, REST, SOAP,AJAX and Repository Desing Pattern. Also I gained some
 experience on Design Pattern, Docker.
 										</p>
 									</div>
