--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
 								<span class="link">Works</span>
 							</a>
 						</li>
-						<!-- <li> -->
-							<!-- <a href="#blog-card"> -->
-								<!-- <span class="icon ion-chatbox-working"></span> -->
-								<!-- <span class="link">Blog</span> -->
-							<!-- </a> -->
-						<!-- </li> -->
+							<li>
+							<a href="#blog-card">
+								<span class="icon ion-paintbrush"></span>
+								<span class="link">Blog</span>
+							</a>
+						</li>
 						<li>
 							<a href="#contacts-card">
 								<span class="icon ion-at"></span>
@@ -297,7 +297,7 @@ developer for about 2+ years.You can review my website learn more about me.
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="fuct-item">
 									<div class="icon"><span class="fa fa-music"></span></div>
-									<div class="name">53,522 Minutes of Music </div>
+									<div class="name">54,181 Minutes of Music </div>
 								</div>
 							</div>
 
@@ -305,7 +305,7 @@ developer for about 2+ years.You can review my website learn more about me.
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="fuct-item">
 									<div class="icon"><span class="fa fa-trophy"></span></div>
-									<div class="name">6 LinkedIn Badges Earned</div>
+									<div class="name">7 LinkedIn Badges Earned</div>
 								</div>
 							</div>
 
@@ -313,7 +313,7 @@ developer for about 2+ years.You can review my website learn more about me.
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="fuct-item">
 									<div class="icon"><span class="fa fa-book"></span></div>
-									<div class="name">118 Books Read</div>
+									<div class="name">119 Books Read</div>
 								</div>
 							</div>
 
@@ -627,6 +627,8 @@ intensive data and complex excel loaded into an infographic format.
 				Card - Works
 			-->
 			<div class="card-inner" id="works-card">
+			
+			
 				<div class="card-wrap">
 
 					<!--
@@ -833,6 +835,58 @@ intensive data and complex excel loaded into an infographic format.
 				</div>
 			</div>
 
+	<div class="card-inner blog" id="blog-card">
+				<div class="card-wrap">
+
+					<!-- Blog -->
+					<div class="content blog">
+
+						<!-- title -->
+						<div class="title">
+							<span >Blog</span>
+						</div>
+
+						<!-- content -->
+						<div class="row border-line-v">
+							<!-- blog item -->
+							<div class="col col-d-6 col-t-6 col-m-12">
+								<div class="box-item">
+									<div class="image">
+										<a target="_blank" href="https://medium.com/@ahmetselcuk/nedir-bu-solid-prensipleri-2499d21d948d">
+											<img src="https://miro.medium.com/max/764/1*OCxpzWfizFHAZH9yfHDbFw.png" alt="Nedir Bu SOLID Prensipleri?" />
+											<span class="info">
+												<span class="ion ion-document-text"></span>
+											</span>
+										</a>
+									</div>
+									<div class="desc">
+										<a href="blog-post-new.html">
+											<span class="date">March 28, 2022</span>
+										</a>
+										<a target="_blank" href="https://medium.com/@ahmetselcuk/nedir-bu-solid-prensipleri-2499d21d948d" class="name">Nedir Bu SOLID Prensipleri?</a>
+										<div class="text">
+											<p>Bugün yazılım sektöründe çalışan herkesin sık sık karşılaştığı konulardan biri olan solid prensipleri konusundan bahsedeceğim...</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+									</div>
+								</div>
+							</div>
+							<div class="clear"></div>
+						</div>
+
+					
+					</div>
+
+				</div>
+			</div>
+
+			<!--
+				Card - Contacts
+			-->
+			
 			<!--
 				Card - Contacts
 			-->
