--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 						</li>
 							<li>
 							<a href="#blog-card">
-								<span class="icon ion-paintbrush"></span>
+								<span class="icon ion-chatbox-working"></span>
 								<span class="link">Blog</span>
 							</a>
 						</li>
