--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 										Hi, my name is Ahmet Selçuk Özdemir. I'm 24
 years old, residing in Istanbul-Eyüpsultan. I have
 been working professionally as a software
-developer for about 2+ years.You can review my website learn more about me.
+developer for about 2+ years.You can review my website learn more about me.I am doing my 28-day military service. I will be with you again on June 10th. :)
 									</p>
 								</div>
 							</div>
