--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 										Hi, my name is Ahmet Selçuk Özdemir. I'm 24
 years old, residing in Istanbul-Eyüpsultan. I have
 been working professionally as a software
-developer for about 2+ years.You can review my website learn more about me.I am doing my 28-day military service. I will be with you again on June 10th. :)
+developer for about 2+ years.You can review my website learn more about me.
 									</p>
 								</div>
 							</div>
@@ -313,7 +313,7 @@ developer for about 2+ years.You can review my website learn more about me.I am 
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="fuct-item">
 									<div class="icon"><span class="fa fa-book"></span></div>
-									<div class="name">119 Books Read</div>
+									<div class="name">121 Books Read</div>
 								</div>
 							</div>
 
@@ -321,7 +321,7 @@ developer for about 2+ years.You can review my website learn more about me.I am 
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="fuct-item">
 									<div class="icon"><span class="fa fa-plane"></span></div>
-									<div class="name">27 City Visited</div>
+									<div class="name">28 City Visited</div>
 								</div>
 							</div>
 							
