--- a/index.html
+++ b/index.html
@@ -28,19 +28,8 @@
 	<link rel="stylesheet" href="css/magnific-popup.css" />
 	<link rel="stylesheet" href="css/animate.css" />
 	<link rel="stylesheet" href="css/owl.carousel.css" />
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-EKSEJMYRGW"></script>
-	<script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'G-EKSEJMYRGW', 'auto');
-        ga('send', 'pageview');
-
-    </script>
+	
 
 
 	<!--
@@ -84,6 +73,33 @@
 		Favicons
 	-->
 	<link rel="shortcut icon" href="images/aso.ico">
+	
+	
+	<script src="js/jquery.min.js"></script>
+
+	
+	
+	<script async>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'G-EKSEJMYRGW', 'auto');
+    ga('send', 'pageview');
+</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EKSEJMYRGW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EKSEJMYRGW');
+</script>
 	
 </head>
 
@@ -1198,7 +1214,7 @@ intensive data and complex excel loaded into an infographic format.
 	<!--
 		jQuery Scripts
 	-->
-	<script src="js/jquery.min.js"></script>
+
 	<script src="js/jquery.validate.js"></script>
 	<script src="js/jquery.magnific-popup.js"></script>
 	<script src="js/imagesloaded.pkgd.js"></script>
@@ -1213,10 +1229,10 @@ intensive data and complex excel loaded into an infographic format.
 	-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz2w7HUaWudHwd7AWQpCL48Qs050WOn9s"></script>
 	
-	<!--
-		Main Scripts
-	-->
+	
+	
 	<script src="js/scripts.js"></script>
+
 
 	
 </body>
