--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@ developer for about 2+ years.You can review my website learn more about me.
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="client-item">
 									<div class="image">
-										<a target="_blank" href="images/turkmedya10.jpeg">
-											<img src="images/turkmedya10.jpeg" alt="" />
+										<a target="_blank" href="images/turkmedya10.jpg">
+											<img src="images/turkmedya10.jpg" alt="" />
 										</a>
 									</div>
 								</div>
