--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 						<a target="_blank" href="https://github.com/ahmetselcukozdemir"><span class="fa fa-github"></span></a>
 						<a target="_blank" href="https://www.youtube.com/channel/UCH-H0SdxilVYDGlmIA5Wbew?view_as=subscriber"><span class="fa fa-youtube"></span></a>
 						<a target="_blank" href="https://medium.com/@ahmetselcuk"><span class="fa fa-medium"></span></a>
+					    <a target="_blank" href="https://open.spotify.com/user/ahmetselcukozdemir01"><span class="fa fa-spotify"></span></a>
 					</div>
 					
 					<!-- profile buttons -->
