--- a/index.html
+++ b/index.html
@@ -696,15 +696,10 @@ intensive data and complex excel loaded into an infographic format.
 										<li class="border-line-h"> 
 											<div class="name">English</div>
 											<div class="progress">
-												<div class="percentage" style="width:70%;"></div>
+												<div class="percentage" style="width:55%;"></div>
 											</div>
 										</li>
-									<li class="border-line-h"> 
-											<div class="name">German</div>
-											<div class="progress">
-												<div class="percentage" style="width:5%;"></div>
-											</div>
-										</li>
+									
 										
 									</ul>
 								</div>
@@ -967,6 +962,28 @@ intensive data and complex excel loaded into an infographic format.
 										<a target="_blank" href="https://medium.com/@ahmetselcuk/nedir-bu-solid-prensipleri-2499d21d948d" class="name">Nedir Bu SOLID Prensipleri?</a>
 										<div class="text">
 											<p>Bugün yazılım sektöründe çalışan herkesin sık sık karşılaştığı konulardan biri olan solid prensipleri konusundan bahsedeceğim...</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<!-- blog item -->
+							<div class="col col-d-6 col-t-6 col-m-12">
+								<div class="box-item">
+									<div class="image">
+										<a target="_blank" href="https://medium.com/@ahmetselcuk/onion-architecture-mimarisi-f61a78fa0d73">
+											<img src="https://miro.medium.com/max/720/0*eJxKd8uo3rPQzqYW" alt="Onion Architecture Mimarisi" />
+											<span class="info">
+												<span class="ion ion-document-text"></span>
+											</span>
+										</a>
+									</div>
+									<div class="desc">
+										<a href="blog-post-new.html">
+											<span class="date">November 13, 2022</span>
+										</a>
+										<a target="_blank" href="https://medium.com/@ahmetselcuk/onion-architecture-mimarisi-f61a78fa0d73" class="name">Onion Architecture Mimarisi</a>
+										<div class="text">
+											<p>Bu yazımda 2008 yılında Jeffrey Palermo tarafından tasarlanmış olan Onion Architecture...</p>
 										</div>
 									</div>
 								</div>
