--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@ intensive data and complex excel loaded into an infographic format.
 								<div class="info-list">
 									<ul>
 										<li><strong>Address . . . . .</strong> İstanbul, Turkey</li>
-										<li><strong>Email . . . . .</strong> ahmet.ozdemir@turkmedya.com.tr</li>
+										<!--<li><strong>Email . . . . .</strong> ahmet.ozdemir@turkmedya.com.tr</li> -->
 										<!-- <li><strong>Phone . . . . .</strong> +123 654 78900</li> -->
 										<!-- <li><strong>Freelance . . . . .</strong> Available</li> -->
 									</ul>
