rabbitmq blog add

--- a/index.html
+++ b/index.html
@@ -956,6 +956,28 @@ intensive data and complex excel loaded into an infographic format.
 									</div>
 								</div>
 							</div>
+							<!-- blog item -->
+							<div class="col col-d-6 col-t-6 col-m-12">
+								<div class="box-item">
+									<div class="image">
+										<a target="_blank" href="https://medium.com/@ahmetselcuk/rabbitmq-teknolojisi-7cff09b28bdd">
+											<img src="https://miro.medium.com/v2/resize:fit:720/format:webp/0*5NCs4kZhDMtYmfXM.png" alt="RabbitMQ Teknolojisi" />
+											<span class="info">
+												<span class="ion ion-document-text"></span>
+											</span>
+										</a>
+									</div>
+									<div class="desc">
+										<a href="blog-post-new.html">
+											<span class="date">August 4, 2023</span>
+										</a>
+										<a target="_blank" href="https://medium.com/@ahmetselcuk/rabbitmq-teknolojisi-7cff09b28bdd" class="name">RabbitMQ Teknolojisi</a>
+										<div class="text">
+											<p>RabbitMQ teknolojisini yakından inceleyeceğimiz bu yazımızda...</p>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 									</div>
 								</div>
