--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@ developer for about 4+ years.You can review my website learn more about me.
 							<div class="col col-d-3 col-t-3 col-m-6 border-line-v">
 								<div class="client-item">
 									<div class="image">
-										<a target="_blank" href="images/manisa-alasehir3.jpeg">
-											<img  src="images/manisa-alasehir3.jpeg" alt="" />
+										<a target="_blank" href="images/aso.jpg">
+											<img  src="images/aso.jpg" alt="" />
 										</a>
 									</div>
 								</div>
@@ -741,6 +741,25 @@ intensive data and complex excel loaded into an infographic format.
 									</div>
 								</div>
 							</div>
+							
+							<div class="col col-d-6 col-t-6 col-m-12 grid-item channel border-line-h">
+								<div class="box-item">
+									<div class="image">
+										<a href="images/tercuman_site.PNG" class="has-popup-music">
+											<img src="images/Logo_tercuman_markalar.png" alt="" />
+											<span class="info">
+												<span class="ion ion-videocamera"></span>
+											</span>
+										</a>
+									</div>
+									<div class="desc">
+										<a  target="_blank"href="https://www.tv360.com.tr/" class="name has-popup">Tercüman</a>
+										<div class="category">Media</div>
+									</div>
+								</div>
+							</div>
+							
+
 
 							<!-- work item video -->
 							<div class="col col-d-6 col-t-6 col-m-12 grid-item media border-line-h">
