--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 					<div class="social">
 						<a target="_blank" href="https://www.linkedin.com/in/ahmetselcuk/"><span class="fa fa-linkedin"></span></a>
 						<a target="_blank" href="https://twitter.com/ahmtselcukk"><span class="fa fa-twitter"></span></a>
+							<a target="_blank" href="https://www.instagram.com/ahmtselcukk"><span class="fa fa-instagram"></span></a>
 						<a target="_blank" href="https://github.com/ahmetselcukozdemir"><span class="fa fa-github"></span></a>
 						<a target="_blank" href="https://www.youtube.com/channel/UCH-H0SdxilVYDGlmIA5Wbew?view_as=subscriber"><span class="fa fa-youtube"></span></a>
 						<a target="_blank" href="https://medium.com/@ahmetselcuk"><span class="fa fa-medium"></span></a>
@@ -753,7 +754,7 @@ intensive data and complex excel loaded into an infographic format.
 										</a>
 									</div>
 									<div class="desc">
-										<a  target="_blank"href="https://www.tv360.com.tr/" class="name has-popup">Tercüman</a>
+										<a  target="_blank"href="https://www.tercuman.com/" class="name has-popup">Tercüman</a>
 										<div class="category">Media</div>
 									</div>
 								</div>
